[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player_old.gd" type="Script" id=1]
[ext_resource path="res://RayDraw.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://main-2.wav" type="AudioStream" id=4]
[ext_resource path="res://MusicLoop.gd" type="Script" id=5]
[ext_resource path="res://RayDraw3D.gd" type="Script" id=6]
[ext_resource path="res://Images/HP1.png" type="Texture" id=7]
[ext_resource path="res://MuzzleFlashLight.gd" type="Script" id=8]
[ext_resource path="res://NotoSansUI_Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://SceneChangeButton.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 0.4

[sub_resource type="CapsuleMesh" id=4]
radius = 0.4

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.3, 0.1, 0.1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.1, 0.1, 0.2 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="BoxShape" id=8]

[sub_resource type="BoxShape" id=9]

[sub_resource type="QuadMesh" id=10]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="BoxShape" id=12]

[sub_resource type="SpatialMaterial" id=13]
flags_unshaded = true
albedo_color = Color( 1, 1, 0.933333, 1 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 15, 0.2, 15 )

[sub_resource type="CubeMesh" id=15]
size = Vector3( 10, 0.2, 10 )

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="GameUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI"]
margin_right = 92.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HPTexture" type="TextureRect" parent="GameUI/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="HealthText" type="Label" parent="GameUI/HBoxContainer"]
margin_left = 68.0
margin_top = 25.0
margin_right = 92.0
margin_bottom = 39.0
size_flags_horizontal = 2
size_flags_vertical = 6
text = "100"
valign = 1

[node name="GameOverUI" type="MarginContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameOverUI"]
margin_right = 1080.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="GameOverUI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameOverUI/Panel"]
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 0.95
text = "Exit"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_name = "res://MainMenu.tscn"

[node name="GameWorld" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="GameWorld"]
transform = Transform( 1, 0, 0, 0, 0.890118, 0.455731, 0, -0.455731, 0.890118, -0.0990918, 6.10096, 8.68376 )
keep_aspect = 0
fov = 65.0

[node name="Player" type="Spatial" parent="GameWorld"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.835, 1, 0 )

[node name="RigidBody" type="RigidBody" parent="GameWorld/Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.038, 0, -0.061 )
physics_material_override = SubResource( 2 )
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_damp = 5.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Player/RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0855103, 0.0514526, 0.0649014 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="GameWorld/Player/RigidBody"]
mesh = SubResource( 4 )
material/0 = null

[node name="PlayerGun" type="Spatial" parent="GameWorld/Player/RigidBody"]
transform = Transform( 1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0.8, 0, 0 )

[node name="Barrel" type="MeshInstance" parent="GameWorld/Player/RigidBody/PlayerGun"]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0, 0 )
layers = 2
cast_shadow = 0
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="GameWorld/Player/RigidBody/PlayerGun/Barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, -0.1 )
layers = 2
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = null

[node name="Flash" type="OmniLight" parent="GameWorld/Player/RigidBody/PlayerGun"]
transform = Transform( 1, 0, 0, 0, 1, -2.03644e-29, 0, -2.03644e-29, 1, 0, 0, -0.196 )
visible = false
light_color = Color( 0.952941, 0.917647, 0.827451, 1 )
light_energy = 0.2
shadow_enabled = true
omni_range = 10.0
script = ExtResource( 8 )

[node name="Terrain" type="Spatial" parent="GameWorld"]

[node name="Wall" type="Spatial" parent="GameWorld/Terrain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85545, 0, 0 )

[node name="Wall3" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.6, 0, 0, 0, 0.45, 0, 0, 0, 0.5, 0.0035094, 0, 1.7521 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall3/Wall1"]
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall3/Wall1"]
shape = SubResource( 8 )

[node name="Wall2" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.2, 0, 0.8 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall2/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall2/Wall1"]
shape = SubResource( 8 )

[node name="Wall1" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.5, 0, 0, 0, 0.48, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall1/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall1/Wall1"]
shape = SubResource( 8 )

[node name="Wall4" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.3, 0, 0, 0, 0.55, 0, 0, 0, 0.6, -0.1, 0, 2.539 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall4/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall4/Wall1"]
shape = SubResource( 8 )

[node name="Wall5" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.0854176, 0, 3.35419 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall5/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall5/Wall1"]
shape = SubResource( 8 )

[node name="Wall6" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.6, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.124462, 0, -0.821108 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall6/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall6/Wall1"]
shape = SubResource( 8 )

[node name="Wall7" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.4, 0.129225, 0, -1.58951 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall7/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall7/Wall1"]
shape = SubResource( 8 )

[node name="Wall8" type="Spatial" parent="GameWorld/Terrain/Wall"]
transform = Transform( 0.55, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.209947, 0, -2.43037 )

[node name="Wall1" type="StaticBody" parent="GameWorld/Terrain/Wall/Wall8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="WallMesh" type="MeshInstance" parent="GameWorld/Terrain/Wall/Wall8/Wall1"]
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/Wall8/Wall1"]
shape = SubResource( 8 )

[node name="WallOmniCollider" type="StaticBody" parent="GameWorld/Terrain/Wall"]

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Wall/WallOmniCollider"]
transform = Transform( 0.8, 0, 0, 0, 1, 0, 0, 0, 5, 0.1, 0, 0 )
shape = SubResource( 9 )

[node name="Floor" type="StaticBody" parent="GameWorld/Terrain"]
transform = Transform( 15, 0, 0, 0, -3.49691e-07, 1, 0, -8, -4.37114e-08, 0, 0, 0 )

[node name="FloorMesh" type="MeshInstance" parent="GameWorld/Terrain/Floor"]
transform = Transform( 1, 0, 0, 0, 1, -4.44089e-16, 0, 0, 1, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 10 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Floor"]
transform = Transform( 1, 0, 0, 0, 1, -8.88178e-16, 0, 2.84217e-14, 1, 0, 4.44089e-16, -0.5 )
shape = SubResource( 11 )

[node name="Bounds" type="StaticBody" parent="GameWorld/Terrain"]

[node name="CollisionShape" type="CollisionShape" parent="GameWorld/Terrain/Bounds"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 5, -7.5, 0, 0 )
shape = SubResource( 12 )

[node name="CollisionShape2" type="CollisionShape" parent="GameWorld/Terrain/Bounds"]
transform = Transform( 15, 0, 0, 0, 5, 0, 0, 0, 1, 0, 0, -4 )
shape = SubResource( 12 )

[node name="CollisionShape3" type="CollisionShape" parent="GameWorld/Terrain/Bounds"]
transform = Transform( 15, 0, 0, 0, 5, 0, 0, 0, 0.5, 0, 0, 4 )
shape = SubResource( 12 )

[node name="CollisionShape4" type="CollisionShape" parent="GameWorld/Terrain/Bounds"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 5, 14, 0, 0 )
shape = SubResource( 12 )

[node name="DirectionalLight" type="DirectionalLight" parent="GameWorld"]
transform = Transform( 0.820092, 0.0312921, 0.571375, -0.41043, 0.727944, 0.549222, -0.398743, -0.684922, 0.609825, 0, 2.64186, 0 )
light_color = Color( 1, 0.972549, 0.831373, 1 )
light_energy = 0.4
shadow_enabled = true

[node name="RayDraw3D" type="ImmediateGeometry" parent="GameWorld"]
material_override = SubResource( 13 )
cast_shadow = 0
script = ExtResource( 6 )

[node name="Area" type="Area" parent="GameWorld"]

[node name="AttackPlane" type="CollisionShape" parent="GameWorld/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="GameWorld/Area/AttackPlane"]
visible = false
mesh = SubResource( 15 )
material/0 = null

[node name="MusicLoop" type="AudioStreamPlayer" parent="GameWorld"]
stream = ExtResource( 4 )
volume_db = 2.0
script = ExtResource( 5 )

[node name="RayDraw" type="Control" parent="GameWorld"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
